--- a/SpotifyElectronWeb/src/layouts/Layout.astro
+++ b/SpotifyElectronWeb/src/layouts/Layout.astro
@@ -12,6 +12,7 @@ const { title } = Astro.props;
         <meta charset="UTF-8" />
         <meta name="description" content="Astro description" />
         <meta name="viewport" content="width=device-width" />
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -28,7 +29,11 @@ const { title } = Astro.props;
 </html>
 <style is:global>
     :root {
-        --accent: 136, 58, 234;
+		--app-logo-color : #9ad9ea;
+		--app-logo-color-darker : #7acfe7;
+
+
+        --accent: 154,217,234;
         --accent-light: 224, 204, 250;
         --accent-dark: 49, 10, 101;
         --accent-gradient: linear-gradient(
@@ -40,6 +45,7 @@ const { title } = Astro.props;
 
         --backkground: #13151a;
         --secondary-color: #292c32;
+
     }
     html {
         font-family: system-ui, sans-serif !important;
@@ -50,7 +56,7 @@ const { title } = Astro.props;
     }
     body {
         background: var(--backkground) !important;
-        overflow-x: hidden;
+        overflow-x: hidden !important;
     }
     ::-webkit-scrollbar {
         width: 12px;
