--- a/SpotifyElectronWeb/src/pages/index.astro
+++ b/SpotifyElectronWeb/src/pages/index.astro
@@ -1,100 +1,193 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Layout from "../layouts/Layout.astro";
+import Card from "../components/Card.astro";
 ---
 
 <Layout title="Welcome to Astro.">
-	<main>
 
-		<div class="d-flex justify-content-center align-items-center">
-			<img class="img-fluid" src="public/homeLaptop.png" alt="">
+	<nav class="navbar navbar-expand-lg bg-dark">
+		<div class="container-fluid">
+			<nav class="navbar bg-dark">
+				<div class="container">
+				  <a class="navbar-brand" href="#">
+					<img src="public/SpotifyElectronLogo.png" alt="SpotifyElectronLogo" width="30" height="30">
+				  </a>
+				</div>
+			  </nav>
+		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		  </button>
+		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+			  <li class="nav-item">
+				<a class="nav-link active" aria-current="page" href="#">Home</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="#">Link</a>
+			  </li>
+			  <li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+				  Dropdown
+				</a>
+				<ul class="dropdown-menu">
+				  <li><a class="dropdown-item" href="#">Action</a></li>
+				  <li><a class="dropdown-item" href="#">Another action</a></li>
+				  <li><hr class="dropdown-divider"></li>
+				  <li><a class="dropdown-item" href="#">Something else here</a></li>
+				</ul>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link disabled">Disabled</a>
+			  </li>
+			</ul>
+			<form class="d-flex" role="search">
+			  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+			  <button class="btn btn-outline-success" type="submit">Search</button>
+			</form>
+		  </div>
 		</div>
+	  </nav>
 
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
-	</main>
+    <main>
+        <div class="d-flex justify-content-center ">
+            <div
+                class="d-flex flex-column justify-content-center"
+            >
+                <div class="d-flex align-items-center">
+					<h1>
+						Welcome to <span
+							class="text-gradient"
+							style="white-space: nowrap;">Spotify Electron</span>
+					</h1>
+				</div>
+                <div class="d-flex align-items-center justify-content-center">
+					<button class="my-btn">Comenzar</button>
+
+				</div>
+            </div>
+            <div class="d-flex justify-content-center align-items-center">
+                <img class="img-fluid" src="public/addSongLaptop.png" alt="" />
+            </div>
+        </div>
+
+        <!-- <div class="d-flex justify-content-center align-items-center">
+            <img
+                class="img-fluid"
+                src="public/SpotifyElectronLogo.png"
+                alt=""
+            />
+        </div> -->
+
+		<hr>
+
+        <p class="instructions">
+            To get started, open the directory <code>src/pages</code> in your project.<br
+            />
+            <strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message
+            above.
+        </p>
+        <ul role="list" class="link-card-grid">
+            <Card
+                href="https://docs.astro.build/"
+                title="Documentation"
+                body="Learn how Astro works and explore the official API docs."
+            />
+            <Card
+                href="https://astro.build/integrations/"
+                title="Integrations"
+                body="Supercharge your project with new frameworks and libraries."
+            />
+            <Card
+                href="https://astro.build/themes/"
+                title="Themes"
+                body="Explore a galaxy of community-built starter themes."
+            />
+            <Card
+                href="https://astro.build/chat/"
+                title="Community"
+                body="Come say hi to our amazing Discord community. ❤️"
+            />
+        </ul>
+    </main>
 </Layout>
 
 <style>
-	main {
-		margin: auto;
-		max-width: 80rem;
-		padding: 1rem;
-		color: white;
-		font-size: 20px;
-		line-height: 1.6;
-		
-	}
-	.astro-a {
-		position: absolute;
-		top: -32px;
-		left: 50%;
-		transform: translatex(-50%);
-		width: 220px;
-		height: auto;
-		z-index: -1;
-	}
-	h1 {
-		font-size: 4rem;
-		font-weight: 700;
-		line-height: 1;
-		text-align: center;
-		margin-bottom: 1em;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		margin-bottom: 2rem;
-		border: 1px solid rgba(var(--accent-light), 25%);
-		background: linear-gradient(rgba(var(--accent-dark), 66%), rgba(var(--accent-dark), 33%));
-		padding: 1.5rem;
-		border-radius: 8px;
-	}
-	.instructions code {
-		font-size: 0.8em;
-		font-weight: bold;
-		background: rgba(var(--accent-light), 12%);
-		color: rgb(var(--accent-light));
-		border-radius: 4px;
-		padding: 0.3em 0.4em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent-light));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 2rem;
-		padding: 0;
-	}
+    main {
+        margin: auto !important;
+        max-width: 80rem !important;
+        padding: 1rem !important;
+        color: white !important;
+        font-size: 20px !important;
+        line-height: 1.6 !important;
+    }
+    .astro-a {
+        position: absolute;
+        top: -32px;
+        left: 50%;
+        transform: translatex(-50%);
+        width: 220px;
+        height: auto;
+        z-index: -1;
+    }
+    h1 {
+        font-size: 4rem;
+        font-weight: 700;
+        line-height: 1;
+        text-align: center;
+        margin-bottom: 3rem !important;
+        margin-top: 1rem;
+    }
+    .text-gradient {
+        background-image: var(--accent-gradient);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-size: 400%;
+        background-position: 0%;
+    }
+    .instructions {
+        margin-bottom: 2rem;
+        border: 1px solid rgba(var(--accent-light), 25%);
+        background: linear-gradient(
+            rgba(var(--accent-dark), 66%),
+            rgba(var(--accent-dark), 33%)
+        );
+        padding: 1.5rem;
+        border-radius: 8px;
+    }
+    .instructions code {
+        font-size: 0.8em;
+        font-weight: bold;
+        background: rgba(var(--accent-light), 12%);
+        color: rgb(var(--accent-light));
+        border-radius: 4px;
+        padding: 0.3em 0.4em;
+    }
+    .instructions strong {
+        color: rgb(var(--accent-light));
+    }
+    .link-card-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
+        gap: 2rem;
+        padding: 0;
+    }
+
+    .my-btn {
+        border: none;
+        background-color: var(--app-logo-color-darker);
+        border-radius: 8px;
+		padding-top: 0.5rem;
+		padding-bottom: 0.5rem;
+        padding-left: 2.5rem;
+        padding-right: 2.5rem;
+        border-radius: 9999px;
+        color: white;
+		font-weight: 600;
+    }
+
+    .my-btn:hover {
+		filter: brightness(0.75); 
+
+    }
+
 </style>
