--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Card from "../components/Card.astro";
 			<nav class="navbar bg-dark">
 				<div class="container">
 				  <a class="navbar-brand" href="#">
-					<img src="public/SpotifyElectronLogo.png" alt="SpotifyElectronLogo" width="30" height="30">
+					<img src="/SpotifyElectronLogo.png" alt="SpotifyElectronLogo" width="30" height="30">
 				  </a>
 				</div>
 			  </nav>
@@ -66,7 +66,7 @@ import Card from "../components/Card.astro";
 				</div>
             </div>
             <div class="d-flex justify-content-center align-items-center">
-                <img class="img-fluid" src="public/addSongLaptop.png" alt="" />
+                <img class="img-fluid" src="/addSongLaptop.png" alt="" />
             </div>
         </div>
 
