--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Card from "../components/Card.astro";
 			<nav class="navbar bg-dark">
 				<div class="container">
 				  <a class="navbar-brand" href="#">
-					<img src="/SpotifyElectronLogo.png" alt="SpotifyElectronLogo" width="30" height="30">
+					<img src="SpotifyElectronLogo.png" alt="SpotifyElectronLogo" width="30" height="30">
 				  </a>
 				</div>
 			  </nav>
