--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -66,7 +66,7 @@ import Card from "../components/Card.astro";
 				</div>
             </div>
             <div class="d-flex justify-content-center align-items-center">
-                <img class="img-fluid" src="/addSongLaptop.png" alt="" />
+                <img class="img-fluid" src="addSongLaptop.png" alt="" />
             </div>
         </div>
 
@@ -119,8 +119,6 @@ import Card from "../components/Card.astro";
         color: white !important;
         font-size: 20px !important;
         line-height: 1.6 !important;
-        background-image: url("/addSongLaptop.png");
-
     }
     .astro-a {
         position: absolute;
