--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,27 +1,34 @@
----
-interface Props {
-    title: string;
-}
-
-const { title } = Astro.props;
----
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta name="description" content="Astro description" />
         <meta name="viewport" content="width=device-width" />
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+            integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+            crossorigin="anonymous"></script>
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
             rel="stylesheet"
             integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
             crossorigin="anonymous"
         />
-        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-        <meta name="generator" content={Astro.generator} />
-        <title>{title}</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="description" content="Spotify Electron Web" />
+        <meta
+            name="keywords"
+            content="Spotify,spotify,SpotifyElectron,Spotify Electron,AntonioMrtz"
+        />
+        <meta name="author" content="Antonio Martínez Fernández" />
+        <meta property="og:image" content="https://raw.githubusercontent.com/AntonioMrtz/SpotifyElectron_Web/main/public/SpotifyElectronLogo.png" />
+        <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/AntonioMrtz/SpotifyElectron_Web/main/public/SpotifyElectronLogo.png" />
+        <meta property="og:image:type" content="image/png" />
+        <meta property="og:image:width" content="400" />
+        <meta property="og:image:height" content="300" />
+        <title>Spotify Electron</title>
+        <link rel="icon" href="SpotifyElectronLogo.png" />
     </head>
     <body>
         <slot />
@@ -29,11 +36,10 @@ const { title } = Astro.props;
 </html>
 <style is:global>
     :root {
-		--app-logo-color : #9ad9ea;
-		--app-logo-color-darker : #7acfe7;
+        --app-logo-color: #9ad9ea;
+        --app-logo-color-darker: #7acfe7;
 
-
-        --accent: 154,217,234;
+        --accent: 154, 217, 234;
         --accent-light: 224, 204, 250;
         --accent-dark: 49, 10, 101;
         --accent-gradient: linear-gradient(
@@ -45,7 +51,6 @@ const { title } = Astro.props;
 
         --backkground: #13151a;
         --secondary-color: #292c32;
-
     }
     html {
         font-family: system-ui, sans-serif !important;
