--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,8 +22,14 @@
             content="Spotify,spotify,SpotifyElectron,Spotify Electron,AntonioMrtz"
         />
         <meta name="author" content="Antonio Martínez Fernández" />
-        <meta property="og:image" content="https://raw.githubusercontent.com/AntonioMrtz/SpotifyElectron_Web/main/public/SpotifyElectronLogo.png" />
-        <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/AntonioMrtz/SpotifyElectron_Web/main/public/SpotifyElectronLogo.png" />
+        <meta
+            property="og:image"
+            content="https://raw.githubusercontent.com/AntonioMrtz/SpotifyElectron_Web/main/public/SpotifyElectronLogo.png"
+        />
+        <meta
+            property="og:image:secure_url"
+            content="https://raw.githubusercontent.com/AntonioMrtz/SpotifyElectron_Web/main/public/SpotifyElectronLogo.png"
+        />
         <meta property="og:image:type" content="image/png" />
         <meta property="og:image:width" content="400" />
         <meta property="og:image:height" content="300" />
