--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,25 +5,22 @@ import Navbar from "../components/Navbar.astro";
 ---
 
 <Layout title="Welcome to Astro.">
-
-  <Navbar></Navbar>
+    <Navbar />
 
     <main>
-        <div class="d-flex justify-content-center ">
-            <div
-                class="d-flex flex-column justify-content-center"
-            >
+        <div class="d-flex justify-content-center">
+            <div class="d-flex flex-column justify-content-center">
                 <div class="d-flex align-items-center">
-					<h1>
-						Welcome to <span
-							class="text-gradient"
-							style="white-space: nowrap;">Spotify Electron</span>
-					</h1>
-				</div>
+                    <h1>
+                        Welcome to <span
+                            class="text-gradient"
+                            style="white-space: nowrap;">Spotify Electron</span
+                        >
+                    </h1>
+                </div>
                 <div class="d-flex align-items-center justify-content-center">
-					<button class="my-btn">Comenzar</button>
-
-				</div>
+                    <button class="my-btn">Comenzar</button>
+                </div>
             </div>
             <div class="d-flex justify-content-center align-items-center">
                 <img class="img-fluid" src="addSongLaptop.png" alt="" />
@@ -38,7 +35,7 @@ import Navbar from "../components/Navbar.astro";
             />
         </div> -->
 
-		<hr>
+        <hr />
 
         <p class="instructions">
             To get started, open the directory <code>src/pages</code> in your project.<br
@@ -136,18 +133,16 @@ import Navbar from "../components/Navbar.astro";
         border: none;
         background-color: var(--app-logo-color-darker);
         border-radius: 8px;
-		padding-top: 0.5rem;
-		padding-bottom: 0.5rem;
+        padding-top: 0.5rem;
+        padding-bottom: 0.5rem;
         padding-left: 2.5rem;
         padding-right: 2.5rem;
         border-radius: 9999px;
         color: white;
-		font-weight: 600;
+        font-weight: 600;
     }
 
     .my-btn:hover {
-		filter: brightness(0.75); 
-
+        filter: brightness(0.75);
     }
-
 </style>
