--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-dark">
+<nav class="navbar navbar-expand-lg bg-dark" id="nav-container">
     <div class="container-fluid">
         <nav class="navbar bg-dark">
             <div class="container">
@@ -34,7 +34,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#"
-                        >Home</a
+                        >Sobre nosotros</a
                     >
                 </li>
                 <li class="nav-item">
@@ -47,6 +47,10 @@
 </nav>
 
 <style>
+    #nav-container{
+        border-bottom: 1px solid var(--spacer);
+        padding: 0.75rem 0 0.75rem 0 !important;
+    }
     .navbar {
         background-color: var(--backkground) !important;
     }
@@ -58,7 +62,10 @@
     .navbar-brand {
         color: var(--app-logo-color) !important;
         font-weight: 600 !important;
-        font-size: 1.25rem !important;
+        font-size: 1.35rem !important;
+        padding-top: 0 !important;
+        padding-bottom: 0 !important;
+
     }
 
     .nav-item {
@@ -70,7 +77,7 @@
     .nav-link {
         color: white !important;
         font-weight: 400 !important;
-        font-size: 1.25rem !important;
+        font-size: 1.15rem !important;
         padding-top: 0 !important;
         padding-bottom: 0 !important;
     }
