--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -57,6 +57,7 @@
 
         --backkground: #13151a;
         --secondary-color: #292c32;
+        --spacer : #4e5053;
     }
     html {
         font-family: system-ui, sans-serif !important;
