--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -41,7 +41,11 @@
                     <a class="nav-link" href="#">Link</a>
                 </li>
             </ul>
-            <div>hola</div>
+            <div style="margin-right: 1.5rem;">
+                <a href="https://github.com/AntonioMrtz/SpotifyElectron">
+                    <i class="fa-brands fa-github fa-lg fa-fw" style="color: white;font-size: 1.75rem;"></i>
+                </a>
+            </div>
         </div>
     </div>
 </nav>
