--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,6 +14,7 @@
             integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
             crossorigin="anonymous"
         />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="description" content="Spotify Electron Web" />
@@ -43,7 +44,7 @@
 <style is:global>
     :root {
         --app-logo-color: #9ad9ea;
-        --app-logo-color-darker: #7acfe7;
+        --app-logo-color-darker: #56afc8;
 
         --accent: 154, 217, 234;
         --accent-light: 224, 204, 250;
