--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import Navbar from "../components/Navbar.astro";
                     </h1>
                 </div>
                 <div class="d-flex align-items-center justify-content-center">
-                    <button class="my-btn">Comenzar</button>
+                    <button class="my-btn"><p style="margin: 0 !important;">Comenzar</p></button>
                 </div>
             </div>
             <div class="d-flex justify-content-center align-items-center">
@@ -35,9 +35,8 @@ import Navbar from "../components/Navbar.astro";
             />
         </div> -->
 
-        <hr />
 
-        <p class="instructions">
+        <!-- <p class="instructions">
             To get started, open the directory <code>src/pages</code> in your project.<br
             />
             <strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message
@@ -64,7 +63,7 @@ import Navbar from "../components/Navbar.astro";
                 title="Community"
                 body="Come say hi to our amazing Discord community. ❤️"
             />
-        </ul>
+        </ul> -->
     </main>
 </Layout>
 
@@ -138,8 +137,10 @@ import Navbar from "../components/Navbar.astro";
         padding-left: 2.5rem;
         padding-right: 2.5rem;
         border-radius: 9999px;
+/*         color: rgb(61, 58, 58);
+ */        font-weight: 600;
         color: white;
-        font-weight: 600;
+
     }
 
     .my-btn:hover {
