--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,79 +2,70 @@
 import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
 import Navbar from "../components/Navbar.astro";
+import MainContent from "../components/MainContent.astro";
 ---
 
-<Layout title="Welcome to Astro.">
-    <Navbar />
+<Layout title="Welcome to Spotify Electron">
+    <div style="height: 100svh; overflow-y: hidden;">
+        <Navbar />
 
-    <main>
-        <div class="d-flex justify-content-center">
-            <div class="d-flex flex-column justify-content-center">
-                <div class="d-flex align-items-center">
-                    <h1>
-                        Welcome to <span
-                            class="text-gradient"
-                            style="white-space: nowrap;">Spotify Electron</span
-                        >
-                    </h1>
+        <header>
+            <div class="d-flex justify-content-center">
+                <div class="d-flex flex-column justify-content-center">
+                    <div class="d-flex align-items-center">
+                        <h1>
+                            Welcome to <span
+                                class="text-gradient"
+                                style="white-space: nowrap;"
+                                >Spotify Electron</span
+                            >
+                        </h1>
+                    </div>
+                    <div
+                        class="d-flex align-items-center justify-content-center"
+                    >
+                        <a href="#prueba">
+                            <button class="my-btn"
+                                ><p style="margin: 0 !important;">
+                                    Comenzar
+                                </p></button
+                            >
+                        </a>
+                    </div>
                 </div>
-                <div class="d-flex align-items-center justify-content-center">
-                    <button class="my-btn"><p style="margin: 0 !important;">Comenzar</p></button>
+                <div class="d-flex justify-content-center align-items-center">
+                    <img class="img-fluid" src="addSongLaptop.png" alt="" />
                 </div>
             </div>
-            <div class="d-flex justify-content-center align-items-center">
-                <img class="img-fluid" src="addSongLaptop.png" alt="" />
+
+            <div class="d-flex flex-column justify-content-center align-items-center" style="height: 100%">
+                <div class="container-fluid d-flex justify-content-center">
+                    <h2>Electron, React and Python</h2>
+                </div>
+
+                <div class="container-fluid d-flex justify-content-center">
+                    <h3>Made by Antonio Martínez Fernández</h3>
+                </div>
             </div>
-        </div>
+        </header>
+    </div>
 
-        <!-- <div class="d-flex justify-content-center align-items-center">
-            <img
-                class="img-fluid"
-                src="public/SpotifyElectronLogo.png"
-                alt=""
-            />
-        </div> -->
-
-
-        <!-- <p class="instructions">
-            To get started, open the directory <code>src/pages</code> in your project.<br
-            />
-            <strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message
-            above.
-        </p>
-        <ul role="list" class="link-card-grid">
-            <Card
-                href="https://docs.astro.build/"
-                title="Documentation"
-                body="Learn how Astro works and explore the official API docs."
-            />
-            <Card
-                href="https://astro.build/integrations/"
-                title="Integrations"
-                body="Supercharge your project with new frameworks and libraries."
-            />
-            <Card
-                href="https://astro.build/themes/"
-                title="Themes"
-                body="Explore a galaxy of community-built starter themes."
-            />
-            <Card
-                href="https://astro.build/chat/"
-                title="Community"
-                body="Come say hi to our amazing Discord community. ❤️"
-            />
-        </ul> -->
-    </main>
+    <MainContent>
+    </MainContent>
 </Layout>
 
 <style>
-    main {
+    header {
         margin: auto !important;
         max-width: 80rem !important;
-        padding: 1rem !important;
         color: white !important;
         font-size: 20px !important;
         line-height: 1.6 !important;
+        margin-bottom: 6rem !important;
+        margin-top: 3rem !important;
+        display: flex;
+        flex-direction: column;
+        height: 80%;
     }
     .astro-a {
         position: absolute;
@@ -86,7 +77,7 @@ import Navbar from "../components/Navbar.astro";
         z-index: -1;
     }
     h1 {
-        font-size: 4rem;
+        font-size: 5rem;
         font-weight: 700;
         line-height: 1;
         text-align: center;
@@ -137,10 +128,8 @@ import Navbar from "../components/Navbar.astro";
         padding-left: 2.5rem;
         padding-right: 2.5rem;
         border-radius: 9999px;
-/*         color: rgb(61, 58, 58);
- */        font-weight: 600;
+        font-weight: 600;
         color: white;
-
     }
 
     .my-btn:hover {
