feat : add tech icons to header

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,12 +40,25 @@ import MainContent from "../components/MainContent.astro";
 
             <div class="d-flex flex-column justify-content-center align-items-center" style="height: 100%">
                 <div class="container-fluid d-flex justify-content-center">
-                    <h2>Electron, React and Python</h2>
+                  
+                  <img class="tech-ico" src="icons/react.png" alt="">
+                  <img class="tech-ico" src="icons/typescript.png" alt="">
+                  <img class="tech-ico" src="icons/electronjs.png" alt="">
+                  <img class="tech-ico" src="icons/python.png" alt="">
+                  <img class="tech-ico" src="icons/mongodb.png" alt="">
+                  <img class="tech-ico" src="icons/css.png" alt="">
+                  <img class="tech-ico" src="icons/fastapi.png" alt="">
+                  <img class="tech-ico" src="icons/boostrap.png" alt="">
+                  <img class="tech-ico" src="icons/materialui.png" alt="">
+                  <img class="tech-ico" src="icons/github_actions.png" alt="">
+
+
+
                 </div>
 
-                <div class="container-fluid d-flex justify-content-center">
+      <!--           <div class="container-fluid d-flex justify-content-center">
                     <h3>Made by Antonio Martínez Fernández</h3>
-                </div>
+                </div> -->
             </div>
         </header>
     </div>
@@ -134,5 +147,10 @@ import MainContent from "../components/MainContent.astro";
 
     .my-btn:hover {
         filter: brightness(0.75);
+    }
+
+    .tech-ico{
+      width: 48px !important;
+      margin: 0 10px 0 10px !important;
     }
 </style>
