feat : add hover effect nabvbar right icons

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -113,4 +113,8 @@
     .navbar-item-right {
         margin-right: 4px;
     }
+
+    .navbar-item-right:hover {
+        filter: brightness(0.75);
+    }
 </style>
