feat : add section structure

--- a/src/components/MainContent.astro
+++ b/src/components/MainContent.astro
@@ -1,15 +1,39 @@
 <main>
-    <div class="section" id="prueba">
-        <h2>Contenido</h2>
-        <p>aaaaaa</p>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+    <div style="background-color: var(--background-secondary);">
+        <section id="goals">
+            <h2>Goals</h2>
+            <p>aaaaaa</p>
+            <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br
+            /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+            <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br
+            /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+        </section>
+    </div>
+    <div>
+        <section id="tech">
+            <h2>Tech</h2>
+            <p>aaaaaa</p>
+            <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br
+            /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+            <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br
+            /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+        </section>
+    </div>
+    <div style="background-color: var(--background-secondary);">
+        <section id="about">
+            <h2>About</h2>
+            <p>aaaaaa</p>
+            <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br
+            /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+            <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br
+            /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+        </section>
     </div>
 </main>
 
 <style>
     main {
-        margin: auto !important;
-        max-width: 80rem !important;
         color: white !important;
         font-size: 20px !important;
         line-height: 1.6 !important;
@@ -17,15 +41,18 @@
         flex-direction: column;
         justify-content: center;
     }
-    h2{
+    h2 {
         font-weight: 600;
         font-size: 4rem;
     }
-    .section{
-
+    section {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+
+        margin: auto !important;
+        max-width: 80rem !important;
+        padding-top: 2rem;
     }
 </style>
