--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -33,12 +33,19 @@
                     >
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#"
-                        >Sobre nosotros</a
+                    <a class="nav-link active" aria-current="page" href="#goals"
+                        >Goals</a
                     >
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link active" aria-current="page" href="#tech"
+                    >Tech</a
+                    >
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#about"
+                        >About</a
+                    >
                 </li>
             </ul>
             <div
