--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -65,6 +65,7 @@
         );
 
         --backkground: #13151a;
+        --background-secondary:#17191e;
         --secondary-color: #292c32;
         --spacer: #4e5053;
     }
