fix : add anchor link get started to goals

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,7 +17,7 @@
             <div
                 class="d-flex align-items-center justify-content-center"
             >
-                <a href="#prueba">
+                <a href="#goals">
                     <button class="my-btn"
                         ><p style="margin: 0 !important;">
                             Get started
