--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-dark">
+<nav class="navbar navbar-expand-lg bg-dark" id="nav-container">
     <div class="container-fluid">
         <nav class="navbar bg-dark">
             <div class="container">
@@ -79,8 +79,8 @@
 </nav>
 
 <style>
-    .navbar-expand-lg{
-        border-bottom: 1px solid var(--spacer) !important;
+    #nav-container {
+        border-bottom: 1px solid var(--spacer);
         padding: 0.75rem 0 0.75rem 0 !important;
     }
     .navbar {
