--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -4,7 +4,7 @@
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img
-                        src="public/SpotifyElectronLogo.png"
+                        src="SpotifyElectronLogo.png"
                         alt="SpotifyElectronLogo"
                         width="30"
                         height="30"
