test : image.src path

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,10 +1,15 @@
+---
+import image from "./SpotifyElectronLogo.png";
+
+---
+
 <nav class="navbar navbar-expand-lg bg-dark" id="nav-container">
     <div class="container-fluid">
         <nav class="navbar bg-dark">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img
-                        src="SpotifyElectronLogo.png"
+                        src={image.src}
                         alt="SpotifyElectronLogo"
                         width="30"
                         height="30"
