test : assert url import

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,5 +1,5 @@
 ---
-import image from "./SpotifyElectronLogo.png";
+import image from "../../public/SpotifyElectronLogo.png?url";
 
 ---
 
@@ -9,7 +9,7 @@ import image from "./SpotifyElectronLogo.png";
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img
-                        src={image.src}
+                        src={image}
                         alt="SpotifyElectronLogo"
                         width="30"
                         height="30"
