fix : fix all images path both dev and build

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,3 +1,20 @@
+---
+import addSongLaptop from "../../public/addSongLaptop.png?url";
+import reactIco from "../../public/icons/react.png?url";
+import tsIco from "../../public/icons/typescript.png?url";
+import electronIco from "../../public/icons/electronjs.png?url";
+import mongoIco from "../../public/icons/mongodb.png?url";
+import cssIco from "../../public/icons/css.png?url";
+import fastApiIco from "../../public/icons/fastapi.png?url";
+import boostrapIco from "../../public/icons/boostrap.png?url";
+import miuIco from "../../public/icons/materialui.png?url";
+import gaIco from "../../public/icons/github_actions.png?url";
+import pyIco from "../../public/icons/python.png?url";
+
+
+---
+
+
 <header>
     <div class="d-flex justify-content-center">
         <div class="d-flex flex-column justify-content-center">
@@ -27,7 +44,7 @@
             </div>
         </div>
         <div class="d-flex justify-content-center align-items-center">
-            <img class="img-fluid" src="addSongLaptop.png" alt="" />
+            <img class="img-fluid" src={addSongLaptop} alt="" />
         </div>
     </div>
 
@@ -39,18 +56,18 @@
             class="d-flex justify-content-center"
             style="border-bottom: 1px solid var(--app-logo-color);padding: 1%;"
         >
-            <img class="tech-ico" src="icons/react.png" alt="" />
-            <img class="tech-ico" src="icons/typescript.png" alt="" />
-            <img class="tech-ico" src="icons/electronjs.png" alt="" />
-            <img class="tech-ico" src="icons/python.png" alt="" />
-            <img class="tech-ico" src="icons/mongodb.png" alt="" />
-            <img class="tech-ico" src="icons/css.png" alt="" />
-            <img class="tech-ico" src="icons/fastapi.png" alt="" />
-            <img class="tech-ico" src="icons/boostrap.png" alt="" />
-            <img class="tech-ico" src="icons/materialui.png" alt="" />
+            <img class="tech-ico" src={reactIco} alt="react icon" />
+            <img class="tech-ico" src={tsIco} alt="typescript icon" />
+            <img class="tech-ico" src={electronIco} alt=" icon" />
+            <img class="tech-ico" src={mongoIco} alt=" icon" />
+            <img class="tech-ico" src={cssIco} alt=" icon" />
+            <img class="tech-ico" src={pyIco} alt=" icon" />
+            <img class="tech-ico" src={fastApiIco} alt=" iconicon" />
+            <img class="tech-ico" src={boostrapIco} alt=" icon" />
+            <img class="tech-ico" src={miuIco} alt=" icon" />
             <img
                 class="tech-ico"
-                src="icons/github_actions.png"
+                src={gaIco}
                 alt=""
             />
         </div>
