--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,5 +1,8 @@
 ---
-import image from "../../public/SpotifyElectronLogo.png?url";
+import spotifyElectronLogo from "../../public/SpotifyElectronLogo.png?url";
+import githubIcon from "../../public/icons/github.png?url";
+import antonioMrtzIcon from "../../public/icons/AntonioMrtzIco.jpg?url";
+
 
 ---
 
@@ -9,7 +12,7 @@ import image from "../../public/SpotifyElectronLogo.png?url";
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img
-                        src={image}
+                        src={spotifyElectronLogo}
                         alt="SpotifyElectronLogo"
                         width="30"
                         height="30"
@@ -62,7 +65,7 @@ import image from "../../public/SpotifyElectronLogo.png?url";
                 >
                     <img
                         class="img-fluid"
-                        src="icons/github.png"
+                        src={githubIcon}
                         alt="Antonio Martinez Photo Icon"
                         style="border-radius: 999px; width: 42px; height: 42px;"
                     />
@@ -73,7 +76,7 @@ import image from "../../public/SpotifyElectronLogo.png?url";
                 >
                     <img
                         class="img-fluid"
-                        src="icons/AntonioMrtzIco.jpg"
+                        src={antonioMrtzIcon}
                         alt="Github Icon"
                         style="border-radius: 999px; width: 38px; height: 38px;"
                     />
