feat : add new images

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-import addSongLaptop from "../../public/addSongLaptop.png?url";
+import addSongLaptop from "../../public/laptopHome.png?url";
 import reactIco from "../../public/icons/react.png?url";
 import tsIco from "../../public/icons/typescript.png?url";
 import electronIco from "../../public/icons/electronjs.png?url";
