style : format all code

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,10 +10,7 @@ import boostrapIco from "../../public/icons/boostrap.png?url";
 import miuIco from "../../public/icons/materialui.png?url";
 import gaIco from "../../public/icons/github_actions.png?url";
 import pyIco from "../../public/icons/python.png?url";
-
-
 ---
-
 
 <header>
     <div class="d-flex justify-content-center">
@@ -25,15 +22,12 @@ import pyIco from "../../public/icons/python.png?url";
                 <h1>
                     Welcome to <span
                         class="text-gradient"
-                        style="white-space: nowrap;"
-                        >Spotify Electron</span
+                        style="white-space: nowrap;">Spotify Electron</span
                     >
                 </h1>
                 <h4 style="color:#adaaaa">Made by Antonio Martínez</h4>
             </div>
-            <div
-                class="d-flex align-items-center justify-content-center"
-            >
+            <div class="d-flex align-items-center justify-content-center">
                 <a href="#goals">
                     <button class="my-btn"
                         ><p style="margin: 0 !important;">
@@ -65,19 +59,13 @@ import pyIco from "../../public/icons/python.png?url";
             <img class="tech-ico" src={fastApiIco} alt=" iconicon" />
             <img class="tech-ico" src={boostrapIco} alt=" icon" />
             <img class="tech-ico" src={miuIco} alt=" icon" />
-            <img
-                class="tech-ico"
-                src={gaIco}
-                alt=""
-            />
+            <img class="tech-ico" src={gaIco} alt="" />
         </div>
     </div>
 </header>
 
-
 <style>
-
-header {
+    header {
         margin: auto !important;
         max-width: 80rem !important;
         color: white !important;
@@ -97,7 +85,6 @@ header {
         text-align: center;
     }
 
-    
     .my-btn {
         border: none;
         background-color: var(--app-logo-color-darker);
@@ -120,9 +107,8 @@ header {
         margin: 0 10px 0 10px !important;
     }
 
-    .tech-ico:hover{
+    .tech-ico:hover {
         transition: transform 0.1s; /* Add a transition on the transform property */
         transform: scale(1.2);
     }
-    
 </style>
