--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
@@ -65,7 +65,7 @@
         );
 
         --backkground: #13151a;
-        --background-secondary:#17191e;
+        --background-secondary: #17191e;
         --secondary-color: #292c32;
         --spacer: #4e5053;
     }
@@ -73,8 +73,15 @@
         font-family: system-ui, sans-serif !important;
     }
     code {
-        font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
-            DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
+        font-family:
+            Menlo,
+            Monaco,
+            Lucida Console,
+            Liberation Mono,
+            DejaVu Sans Mono,
+            Bitstream Vera Sans Mono,
+            Courier New,
+            monospace;
     }
     body {
         background: var(--backkground) !important;
@@ -99,5 +106,4 @@
         /* For Firefox */
         scrollbar-color: #23262d #13151a;
     }
-
 </style>
