--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,6 @@
 ---
-import addSongLaptop from "../../public/laptopHome.webp?url";
+import laptopHome from "../../public/laptopHome.webp?url";
+import laptopHomePhone from "../../public/laptopHomePhone.webp?url";
 import reactIco from "../../public/icons/react.png?url";
 import tsIco from "../../public/icons/typescript.png?url";
 import electronIco from "../../public/icons/electronjs.png?url";
@@ -48,8 +49,14 @@ import pyIco from "../../public/icons/python.png?url";
         <div
             class="d-flex justify-content-center align-items-center header-img-container"
         >
-            <img class="img-fluid" src={addSongLaptop} alt="" />
+            <img class="img-fluid" src={laptopHome} alt="" />
         </div>
+    </div>
+
+    <div
+        class="d-flex justify-content-center align-items-center m-4 header-image-container-phone"
+    >
+        <img class="img-fluid" src={laptopHomePhone} alt="" />
     </div>
 
     <div
@@ -57,19 +64,13 @@ import pyIco from "../../public/icons/python.png?url";
     >
         <div
             class="d-flex flex-wrap justify-content-center"
-            style="padding: 1% 0 1% 1%;"
+            style="padding: 1%"
         >
             <img class="tech-ico" src={reactIco} alt="react icon" />
             <img class="tech-ico" src={tsIco} alt="typescript icon" />
             <img class="tech-ico" src={electronIco} alt=" icon" />
             <img class="tech-ico" src={mongoIco} alt=" icon" />
             <img class="tech-ico" src={cssIco} alt=" icon" />
-        </div>
-
-        <div
-            class="d-flex flex-wrap justify-content-center"
-            style="padding: 1% 1% 1% 0;"
-        >
             <img class="tech-ico" src={pyIco} alt=" icon" />
             <img class="tech-ico" src={fastApiIco} alt=" iconicon" />
             <img class="tech-ico" src={boostrapIco} alt=" icon" />
@@ -122,6 +123,10 @@ import pyIco from "../../public/icons/python.png?url";
         border: 1px solid var(--app-logo-color-darker);
     }
 
+    .header-image-container-phone {
+        display: none !important;
+    }
+
     .tech-ico {
         width: 32px !important;
         margin: 0 10px 0 10px !important;
@@ -143,11 +148,19 @@ import pyIco from "../../public/icons/python.png?url";
             font-size: 2.8rem !important;
         }
 
+        header {
+            margin-top: 0 !important;
+        }
+
         .header-img-container {
             display: none !important;
         }
+
+        .header-image-container-phone {
+            display: block !important;
+        }
         .tech-wrapper {
-            flex-direction: column !important;
+            display: none !important;
         }
     }
 
