--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,7 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="description" content="Astro description" />
         <meta name="viewport" content="width=device-width" />
-        <script defer
+        <script
+            defer
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
             integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
             crossorigin="anonymous"></script>
@@ -63,12 +64,11 @@
         --backkground: #13151a;
         --background-secondary: #17191e;
         --secondary-color: #292c32;
-        --dark-filler : rgb(37 37 43);
+        --dark-filler: rgb(37 37 43);
 
         --spacer: #4e5053;
 
-
-        --phone-break-width : 989px;
+        --phone-break-width: 989px;
     }
     html {
         font-family: system-ui, sans-serif !important;
