feat : add line below tech stack

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -64,7 +64,7 @@ import pyIco from "../../public/icons/python.png?url";
     >
         <div
             class="d-flex flex-wrap justify-content-center"
-            style="padding: 1%"
+            style="padding: 1%;border-bottom: 1px solid var(--app-logo-color)"
         >
             <img class="tech-ico" src={reactIco} alt="react icon" />
             <img class="tech-ico" src={tsIco} alt="typescript icon" />
