feat :  text gradient to header title

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -94,6 +94,14 @@ import pyIco from "../../public/icons/python.png?url";
         height: 80%;
     }
 
+    .text-gradient {
+		background-image: var(--accent-gradient);
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
+		background-size: 400%;
+		background-position: 0%;
+	}
+
     h1 {
         font-size: 5rem;
         font-weight: 700;
