fix : delete laptopHomePhone bc of bad quality

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,5 @@
 ---
 import laptopHome from "../../public/laptopHome.webp?url";
-import laptopHomePhone from "../../public/laptopHomePhone.webp?url";
 import reactIco from "../../public/icons/react.png?url";
 import tsIco from "../../public/icons/typescript.png?url";
 import electronIco from "../../public/icons/electronjs.png?url";
@@ -56,7 +55,7 @@ import pyIco from "../../public/icons/python.png?url";
     <div
         class="d-flex justify-content-center align-items-center m-4 header-image-container-phone"
     >
-        <img class="img-fluid" src={laptopHomePhone} alt="" />
+        <img class="img-fluid" src={laptopHome} alt="" />
     </div>
 
     <div
