fix : accesibility & performance fixes

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -25,7 +25,7 @@ import pyIco from "../../public/icons/python.png?url";
                         style="white-space: nowrap;">Spotify Electron</span
                     >
                 </h1>
-                <h4 style="color:#adaaaa">Made by Antonio Martínez</h4>
+                <h2 style="color:#adaaaa">Made by Antonio Martínez</h2>
             </div>
             <div
                 class="d-flex align-items-center justify-content-center btn-container"
@@ -33,7 +33,7 @@ import pyIco from "../../public/icons/python.png?url";
             >
                 <a href="#goals">
                     <button class="my-btn"
-                        ><p style="margin: 0 !important;">
+                        ><p style="margin: 0 !important;color:#0d0d0e !important;font-weight:700">
                             Get started
                         </p></button
                     >
@@ -65,16 +65,16 @@ import pyIco from "../../public/icons/python.png?url";
             class="d-flex flex-wrap justify-content-center"
             style="padding: 1%;border-bottom: 1px solid var(--app-logo-color)"
         >
-            <img class="tech-ico" src={reactIco} alt="react icon" />
-            <img class="tech-ico" src={tsIco} alt="typescript icon" />
-            <img class="tech-ico" src={electronIco} alt=" icon" />
-            <img class="tech-ico" src={mongoIco} alt=" icon" />
-            <img class="tech-ico" src={cssIco} alt=" icon" />
-            <img class="tech-ico" src={pyIco} alt=" icon" />
-            <img class="tech-ico" src={fastApiIco} alt=" iconicon" />
-            <img class="tech-ico" src={boostrapIco} alt=" icon" />
-            <img class="tech-ico" src={miuIco} alt=" icon" />
-            <img class="tech-ico" src={gaIco} alt="" />
+            <img class="tech-ico" src={reactIco} alt="react icon" width="32px" height="32px"/>
+            <img class="tech-ico" src={tsIco} alt="typescript icon" width="32px" height="32px"/>
+            <img class="tech-ico" src={electronIco} alt=" icon" width="32px" height="32px"/>
+            <img class="tech-ico" src={mongoIco} alt=" icon" width="32px" height="32px"/>
+            <img class="tech-ico" src={cssIco} alt=" icon" width="32px" height="32px"/>
+            <img class="tech-ico" src={pyIco} alt=" icon" width="32px" height="32px"/>
+            <img class="tech-ico" src={fastApiIco} alt=" iconicon" width="32px" height="32px"/>
+            <img class="tech-ico" src={boostrapIco} alt=" icon" width="32px" height="32px"/>
+            <img class="tech-ico" src={miuIco} alt=" icon" width="32px" height="32px"/>
+            <img class="tech-ico" src={gaIco} alt="" width="32px" height="32px"/>
         </div>
     </div>
 </header>
@@ -128,6 +128,8 @@ import pyIco from "../../public/icons/python.png?url";
     .btn-secondary {
         background-color: var(--background-secondary);
         border: 1px solid var(--app-logo-color-darker);
+        filter: brightness(0.85);
+
     }
 
     .header-image-container-phone {
