--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -48,14 +48,14 @@ import pyIco from "../../public/icons/python.png?url";
         <div
             class="d-flex justify-content-center align-items-center header-img-container"
         >
-            <img class="img-fluid" src={laptopHome} alt="" />
+            <img class="img-fluid" src={laptopHome} alt="Laptop App Display" width="700px" height="314px"/>
         </div>
     </div>
 
     <div
         class="d-flex justify-content-center align-items-center m-4 header-image-container-phone"
     >
-        <img class="img-fluid" src={laptopHome} alt="" />
+        <img class="img-fluid" src={laptopHome} alt="Laptop App Display" />
     </div>
 
     <div
