--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -92,6 +92,15 @@
     a {
         text-decoration: none;
     }
+
+    ul{
+        padding: 0% !important;
+    }
+    li{
+
+        list-style: none;
+    }
+
     ::-webkit-scrollbar {
         width: 12px;
     }
