feat : footer responsive

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -99,4 +99,16 @@ import antonioMrtzLogoIcon from "../../public/icons/logoAM.png?url";
         flex-direction: row;
         justify-content: space-between;
     }
+
+
+    @media (max-width: 989px) {
+        .col-wrapper{
+
+            flex-direction: column !important;
+        }
+        .header{
+            margin-bottom: 1rem;
+        }
+        
+    }
 </style>
