feat : sticky button

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,11 +13,21 @@ import antonioMrtzLogoIcon from "../../public/icons/logoAM.png?url";
                 <div class="header">App</div>
                 <div>
                     <ul>
-                        <li><a href="https://github.com/AntonioMrtz/SpotifyElectron">Repository</a></li>
-                        <li><a href="https://github.com/AntonioMrtz/SpotifyElectron/blob/master/.github/CONTRIBUTING.md">Contribute</a></li>
-                        <li><a href="https://github.com/AntonioMrtz/SpotifyElectron/blob/master/LICENSE">License</a></li>
-
-
+                        <li>
+                            <a
+                                href="https://github.com/AntonioMrtz/SpotifyElectron"
+                                >Repository</a>
+                        </li>
+                        <li>
+                            <a
+                                href="https://github.com/AntonioMrtz/SpotifyElectron/blob/master/.github/CONTRIBUTING.md"
+                                >Contribute</a>
+                        </li>
+                        <li>
+                            <a
+                                href="https://github.com/AntonioMrtz/SpotifyElectron/blob/master/LICENSE"
+                                >License</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -25,11 +35,23 @@ import antonioMrtzLogoIcon from "../../public/icons/logoAM.png?url";
                 <div class="header">Personal</div>
                 <div>
                     <ul>
-                        <li><a href="https://antoniomrtz.github.io/Portfolio/">Portfolio</a></li>
-                        <li><a href="https://github.com/AntonioMrtz">Github</a></li>
-                        <li><a href="https://www.linkedin.com/in/antonio-martinez-fern%C3%A1ndez-7b2a3224b/">Linkedin</a></li>
-                        <li><a href="https://www.instagram.com/antonio_martin3z/">Instagram</a></li>
-
+                        <li>
+                            <a href="https://antoniomrtz.github.io/Portfolio/"
+                                >Portfolio</a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/AntonioMrtz">Github</a>
+                        </li>
+                        <li>
+                            <a
+                                href="https://www.linkedin.com/in/antonio-martinez-fern%C3%A1ndez-7b2a3224b/"
+                                >Linkedin</a>
+                        </li>
+                        <li>
+                            <a
+                                href="https://www.instagram.com/antonio_martin3z/"
+                                >Instagram</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -72,11 +94,11 @@ import antonioMrtzLogoIcon from "../../public/icons/logoAM.png?url";
         color: rgb(219, 218, 218);
     }
 
-    .secondary-col ul{
+    .secondary-col ul {
         gap: 20px;
     }
 
-    .secondary-col li{
+    .secondary-col li {
         margin-bottom: 5px;
     }
     .secondary-col .header {
@@ -100,15 +122,12 @@ import antonioMrtzLogoIcon from "../../public/icons/logoAM.png?url";
         justify-content: space-between;
     }
 
-
     @media (max-width: 989px) {
-        .col-wrapper{
-
+        .col-wrapper {
             flex-direction: column !important;
         }
-        .header{
+        .header {
             margin-bottom: 1rem;
         }
-        
     }
 </style>
