--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,7 +12,7 @@ import gaIco from "../../public/icons/github_actions.png?url";
 import pyIco from "../../public/icons/python.png?url";
 ---
 
-<header>
+<header id="home">
     <div class="d-flex justify-content-center mt-3 h-100">
         <div class="d-flex flex-column justify-content-center">
             <div
