--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Navbar from "../components/Navbar.astro";
 import MainContent from "../components/MainContent.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
+import StickyButton from "../components/StickyButton.astro";
 ---
 
 <Layout title="Welcome to Spotify Electron">
@@ -15,6 +16,8 @@ import Footer from "../components/Footer.astro";
 
     <MainContent />
     <Footer />
+    <StickyButton/>
+
 </Layout>
 
 <style>
