fix : meta tags references to logo pathfixed

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,17 +25,17 @@
         <meta name="author" content="Antonio Martínez Fernández" />
         <meta
             property="og:image"
-            content="https://raw.githubusercontent.com/AntonioMrtz/SpotifyElectron_Web/main/public/SpotifyElectronLogo.png"
+            content="https://raw.githubusercontent.com/AntonioMrtz/SpotifyElectron_Web/main/public/icons/SpotifyElectronLogo.png"
         />
         <meta
             property="og:image:secure_url"
-            content="https://raw.githubusercontent.com/AntonioMrtz/SpotifyElectron_Web/main/public/SpotifyElectronLogo.png"
+            content="https://raw.githubusercontent.com/AntonioMrtz/SpotifyElectron_Web/main/public/icons/SpotifyElectronLogo.png"
         />
         <meta property="og:image:type" content="image/png" />
         <meta property="og:image:width" content="400" />
         <meta property="og:image:height" content="300" />
         <title>Spotify Electron</title>
-        <link rel="icon" href="SpotifyElectronLogo.png" />
+        <link rel="icon" href="icons/SpotifyElectronLogo.png" />
     </head>
     <body>
         <slot />
