feat : architecture theApp

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -31,7 +31,7 @@ import pyIco from "../../public/icons/python.png?url";
                 class="d-flex align-items-center justify-content-center btn-container"
                 style="gap:10px"
             >
-                <a href="#goals">
+                <a href="#theapp">
                     <button class="my-btn"
                         ><p style="margin: 0 !important;color:#0d0d0e !important;font-weight:700">
                             Get started
