--- a/src/components/MainContent.astro
+++ b/src/components/MainContent.astro
@@ -1,16 +1,108 @@
-<main>
+---
+import home from "../../public/walktrough/home.png?url";
+import playlist from "../../public/walktrough/playlist.png?url";
+import uploadSong from "../../public/walktrough/uploadSong.png?url";
+import updatePlaylist from "../../public/walktrough/updatePlaylist.png?url";
+---
 
-    <div style="background-color: var(--background-secondary);">
-        <section id="goals">
-            <h2>Goals</h2>
-            <p>aaaaaa</p>
-            <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br
-            /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-            <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br
-            /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+<main>
+    <div class="section-wrapper">
+        <section id="theapp">
+            <div class="d-flex flex-row">
+                <h2 style="margin-right: 15px;">The</h2><h2>App</h2>
+            </div>
+
+            <div class="theapp-section section-left">
+                <img class="img-fluid" src={home} alt="" />
+
+                <div class="theapp-section-header">
+                    <h3>Header</h3>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and
+                        typesetting industry. Lorem Ipsum has been the
+                        industry's standard dummy text ever since the 1500s,
+                        when an unknown printer took a galley of type and
+                        scrambled it to make a type specimen book. It has
+                        survived not only five centuries, but also the leap into
+                        electronic typesetting, remaining essentially unchanged.
+                        It was popularised in the 1960s with the release of
+                        Letraset sheets containing Lorem Ipsum passages, and
+                        more recently with desktop publishing software like
+                        Aldus PageMaker including versions of Lorem Ipsum.
+                    </p>
+                </div>
+            </div>
+            <div class="theapp-section section-right">
+                <div class="theapp-section-header">
+                    <h3>Header</h3>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and
+                        typesetting industry. Lorem Ipsum has been the
+                        industry's standard dummy text ever since the 1500s,
+                        when an unknown printer took a galley of type and
+                        scrambled it to make a type specimen book. It has
+                        survived not only five centuries, but also the leap into
+                        electronic typesetting, remaining essentially unchanged.
+                        It was popularised in the 1960s with the release of
+                        Letraset sheets containing Lorem Ipsum passages, and
+                        more recently with desktop publishing software like
+                        Aldus PageMaker including versions of Lorem Ipsum.
+                    </p>
+                </div>
+
+                <img class="img-fluid" src={playlist} alt="" />
+            </div>
+
+            <div class="theapp-section section-left">
+                <img class="img-fluid" src={uploadSong} alt="" />
+
+                <div class="theapp-section-header">
+                    <h3>Header</h3>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and
+                        typesetting industry. Lorem Ipsum has been the
+                        industry's standard dummy text ever since the 1500s,
+                        when an unknown printer took a galley of type and
+                        scrambled it to make a type specimen book. It has
+                        survived not only five centuries, but also the leap into
+                        electronic typesetting, remaining essentially unchanged.
+                        It was popularised in the 1960s with the release of
+                        Letraset sheets containing Lorem Ipsum passages, and
+                        more recently with desktop publishing software like
+                        Aldus PageMaker including versions of Lorem Ipsum.
+                    </p>
+                </div>
+            </div>
+
+            <div class="theapp-section section-right">
+                <div class="theapp-section-header">
+                    <h3>Header</h3>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and
+                        typesetting industry. Lorem Ipsum has been the
+                        industry's standard dummy text ever since the 1500s,
+                        when an unknown printer took a galley of type and
+                        scrambled it to make a type specimen book. It has
+                        survived not only five centuries, but also the leap into
+                        electronic typesetting, remaining essentially unchanged.
+                        It was popularised in the 1960s with the release of
+                        Letraset sheets containing Lorem Ipsum passages, and
+                        more recently with desktop publishing software like
+                        Aldus PageMaker including versions of Lorem Ipsum.
+                    </p>
+                </div>
+
+                <img class="img-fluid" src={updatePlaylist} alt="" />
+            </div>
         </section>
     </div>
-    <div>
+
+    <div class="section-wrapper">
+        <section id="goals">
+            <h2>Goals</h2>
+        </section>
+    </div>
+    <div class="section-wrapper">
         <section id="tech">
             <h2>Tech</h2>
             <p>aaaaaa</p>
@@ -20,7 +112,7 @@
             /><br /><br /><br /><br /><br /><br /><br /><br /><br />
         </section>
     </div>
-    <div style="background-color: var(--background-secondary);">
+    <div class="section-wrapper">
         <section id="about">
             <h2>About</h2>
             <p>aaaaaa</p>
@@ -41,9 +133,17 @@
         flex-direction: column;
         justify-content: center;
     }
+
+    main .section-wrapper:nth-child(odd) {
+        background-color: var(--background-secondary);
+    }
     h2 {
         font-weight: 600;
         font-size: 4rem;
+        margin-bottom: 8rem;
+    }
+    h2::first-letter {
+        color: var(--app-logo-color);
     }
     section {
         display: flex;
@@ -54,5 +154,53 @@
         margin: auto !important;
         max-width: 80rem !important;
         padding-top: 2rem;
+    }
+
+    .theapp-section {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        margin-bottom: 8rem;
+        padding: 0 1rem 0 1rem;
+    }
+
+    .theapp-section img {
+        width: 40svw;
+        border-radius: 8px;
+    }
+    .theapp-section-header {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .section-left img {
+        margin-right: 3rem;
+        filter: drop-shadow(-20px 15px 10px var(--secondary-color));
+    }
+
+    .section-right img {
+        margin-left: 3rem;
+        filter: drop-shadow(20px 15px 10px var(--secondary-color));
+    }
+
+    @media (max-width: 989px) {
+        .theapp-section {
+            flex-direction: column;
+            padding: 0 5% 0 5%;
+        }
+        .theapp-section img {
+            margin: 2rem 0 0 0 !important;
+            width: 70svw;
+            filter: drop-shadow(0px 0px 10px var(--secondary-color));
+        }
+
+        .section-left .theapp-section-header {
+            order: 1;
+        }
+        .section-left img {
+            order: 2;
+        }
     }
 </style>
