--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -39,6 +39,11 @@ import antonioMrtzIcon from "../../public/icons/AntonioMrtzIco.jpg?url";
                     >
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#theapp"
+                        >The App</a
+                    >
+                </li>
+                <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#goals"
                         >Goals</a
                     >
