fix : typo error image The App

--- a/src/components/MainContent.astro
+++ b/src/components/MainContent.astro
@@ -1,8 +1,8 @@
 ---
-import home from "../../public/walktrough/home.png?url";
-import playlist from "../../public/walktrough/playlist.png?url";
-import uploadSong from "../../public/walktrough/uploadSong.png?url";
-import updatePlaylist from "../../public/walktrough/updatePlaylist.png?url";
+import home from "../../public/walktrough/Home.png?url";
+import playlist from "../../public/walktrough/Playlist.png?url";
+import uploadSong from "../../public/walktrough/UploadSong.png?url";
+import updatePlaylist from "../../public/walktrough/UpdatePlaylist.png?url";
 ---
 
 <main>
